eval_outputs/diff_and_source_code/code_change_and_test_change/first/google/27_B_Model/refined_zero-shot.log
=== RETURN CODE: 1 ===

=== STDOUT ===
SyntaxError: /Users/johndennehy/Documents/Coding/devops-atu-disruptive-devops-assignment/app/e2e/refined_zero-shot.spec.ts: Unterminated template. (28:3)

  26 |   await expect(page.getByText("Your Notes (0)")).toBeVisible()
  27 | });
> 28 | ```
     |    ^

   at refined_zero-shot.spec.ts:28

  26 |   await expect(page.getByText("Your Notes (0)")).toBeVisible()
  27 | });
> 28 | ```
     |   ^

Error: No tests found.
Make sure that arguments are regular expressions matching test files.
You may need to escape symbols like "$" or "*" and quote the arguments.

[1A[2K

=== STDERR ===

